--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
-    "openai": "^4.58.1",
+    "openai": "^4.61.0",
+    "pdfjs-dist": "^4.6.82",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
